FONT ON MOBILE FIXED

--- a/src/components/Speedometer/Speedometer.scss
+++ b/src/components/Speedometer/Speedometer.scss
@@ -69,6 +69,9 @@
     flex-direction: column;
     gap:1rem
   }
+  .time,.go{
+    font-family:$mobile;
+  }
 }
 @media only screen  and (max-width:330px) {
   .speed_meter_main{
