--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,3 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Wallpoet&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Faster+One&display=swap');
 
 $time:'Wallpoet';
+$mobile:'Faster One';
